# spotify_playlist_optimizer

./: .env.example  .gitignore  .gitignore.bak  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  tmp.sh
.github/workflows/: ci.yml
scripts/: demo_dry_run.sh  demo_optimize.sh  playlist_dry_run.sh  test_spotify_auth.sh
src/: README.md  demo_dataset.py  spotify_playlist_optimizer.py
src/plugins/: greedy_two_opt.py
src/reporting/: html_report.py  visuals.py
